# Civic-Auditor

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
civicqa/: __init__.py  auditor.py  cli.py  dimensions.py  ingestion.py
examples/: civic_requests.csv  civic_requests.meta.json
tests/: test_dimensions.py
